# RapidGL

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  UV_REJECT_HISTORY.md
cmake/: global_settings.cmake
resources/icons/: light-area.xcf  light-directional.xcf  light-disc.xcf  light-point.xcf  light-sphere.xcf  light-spot.xcf  light-tube.xcf  lights.array
resources/models/: default-cube.blend  default-cube.gltf  floor.blend  floor.gltf
resources/models/guard/: guard1_body.tga  guard1_face.tga  guard1_helmet.tga  iron_grill.tga  round_grill.tga
resources/models/sponza/: 1219024358953944284.jxl  2051777328469649772.jxl  2185409758123873465.jxl  2299742237651021498.jxl  2374361008830720677.jxl  2411100444841994089.jxl  2775690330959970771.jxl  2969916736137545357.jxl  332936164838540657.jxl  3371964815757888145.jxl  3455394979645218238.jxl  3628158980083700836.jxl  3827035219084910048.jxl  4477655471536070370.jxl  466164707995436622.jxl  4675343432951571524.jxl  4871783166746854860.jxl  4910669866631290573.jxl  4975155472559461469.jxl  5061699253647017043.jxl  5792855332885324923.jxl  5823059166183034438.jxl  6047387724914829168.jxl  6151467286084645207.jxl  6667038893015345571.jxl  6772804448157695701.jxl  715093869573992647.jxl  7268504077753552595.jxl  7441062115984513793.jxl  755318871556304029.jxl  759203620573749278.jxl  7645212358685992005.jxl  7815564343179553343.jxl  8006627369776289000.jxl  8051790464816141987.jxl  8114461559286000061.jxl  8481240838833932244.jxl  8503262930880235456.jxl  8747919177698443163.jxl  8750083169368950601.jxl  (+6 more)
resources/models/surface_lights/: disc.blend  disc.gltf  rect.blend  rect.gltf  sphere.blend  sphere.gltf  tube.blend  tube.gltf
resources/models/testroom/: rocks-1k-diffuse.jxl  rocks-1k-normal.jxl  testroom.blend  testroom.blend1  testroom.gltf
resources/shaders/: background.frag  billboard-icon.frag  billboard-icon.vert  blur_3d.comp  clustered_cull.comp  cull_lights.comp  depth_pass.frag  depth_pass.vert  draw2d_rectangle.frag  frustum.glh  gaussian_blur.comp  imgui_3d_texture.frag  imgui_3d_texture.vert  imgui_depth_image.frag  light.glh  light_constants.h  noise.glh  pbr_clustered.frag  pbr_lighting.glh  pbr_lighting.vert  precompute_brdf.frag  seven_segment_number.frag  shadow_depth.frag  shadow_depth.vert  shadows.glh  shapes.glh  shared-structs.glh  surface_light_geom.frag  surface_light_geom.vert  tmo.frag  volumetrics.glh  volumetrics_accumulate.comp  volumetrics_bake.comp  volumetrics_cull.comp  volumetrics_debug.comp  volumetrics_inject.comp  volumetrics_march.comp  volumetrics_select_lights.comp
resources/shaders/attic/: shadow_cube.frag
resources/textures/: bloom_dirt_mask.jxl  blue-noise.array  blue-noise.ktx2
screenshots/: point-&-dir-shadows.jxl
scripts/: gl_lookup_to_cpp  glsl_std430_to_cpp  glsl_struct_to_cpp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/zig01/: CMakeLists.txt  main.cpp  zigapp.cpp  zigapp.h  zigapp_debug_draw.cpp  zigapp_ui.cpp
src/apps/zig01/shaders/: gaussian_blur_lds.comp  light_scattering.comp
src/core/: CMakeLists.txt  GLTimer.cpp  GLTimer.h  animated_model.cpp  animated_model.h  bounds.cpp  bounds.h  buffer.cpp  buffer.h  buffer_binds.h  camera.cpp  camera.h  common.h  component_bounds.h  component_light_disc.h  component_light_general.h  component_light_rect.h  component_light_sphere.h  component_light_spot.h  component_light_tube.h  component_model.h  component_transform.cpp  component_transform.h  constants.h  container_types.h  core_app.cpp  core_app.h  debug_output_gl.h  dynamic_object.h  filesystem.cpp  filesystem.h  formatters_glm.h  frustum.cpp  frustum.h  gl_lookup.h  gl_timer.cpp  gl_timer.h  hash_combine.h  hash_mat4.h  hash_quat.h  (+76 more)
src/core/component/: bounds.h  camera_general.h  camera_perspective.h  light_directional.h  light_general.h  light_point.h  light_rect.h  light_tube.h  model.h  transform.cpp
src/core/gui/: font.cpp  font.h  gui.cpp  gui.h  imgui_impl_glfw.cpp
src/core/tests/: CMakeLists.txt  test_core_main.cpp  test_ringbuffer.cpp  test_spatial_allocator.cpp
src/demos/: CMakeLists.txt
src/demos/00_template_project/: template_project.cpp
src/demos/01_simple_triangle/: simple_triangle.cpp
src/demos/02_simple_3d/: simple_3d.cpp
src/demos/03_lighting/: lighting.cpp
src/demos/04_terrain/: terrain.cpp  terrain_model.cpp
src/demos/05_toon_outline/: toon_outline.cpp
src/demos/06_simple_fog/: simple_fog.cpp
src/demos/07_alpha_cutout/: alpha_cutout.cpp
src/demos/08_enviro_mapping/: enviro_mapping.cpp  skybox.hpp
src/demos/09_projected_texture/: projected_texture.cpp
src/demos/10_postprocessing_filters/: CMakeLists.txt  postprocessing_filters.cpp  postprocessing_filters.h
src/demos/11_gs_point_sprites/: gs_point_sprites.cpp
src/demos/27_clustered_shading/: CMakeLists.txt  FSQ.frag  FSQ.vert  area_light_geom.vert  buffer_binds.h  clustered_shading.cpp  clustered_shading.h  clustered_shading_debug_draw.cpp  clustered_shading_ui.cpp  collate_nonempty_index.comp  collect_active_clusters.comp  collect_nonempty_clusters.comp  cull_lights.comp  downscale_blur.comp  find_nonempty_clusters.comp  find_visible_clusters.comp  flag_nonempty_clusters.comp  gaussian_blur.comp  generate_clusters.comp  imgui_depth_image.frag  imgui_depth_image.vert  light_constants.h  light_manager.cpp  light_manager.h  light_scattering.comp  lights.h  line_draw.vert  line_draw_2d.frag  main.cpp  make_cull_lights_args.comp  pbr_clustered.frag  pbr_lighting.glh  shadow_atlas.cpp  shadow_atlas.h  shadow_depth.vert  shared-structs.glh  shared.h  ssbo_binds.h  update_cull_lights_indirect_args.comp  update_lights.comp
src/demos/27_clustered_shading/shaders/: FSQ.frag  area_light_geom.vert  background.vert  cull_lights.comp  draw2d_line.frag  find_nonempty_clusters.comp  gaussian_blur_parametric.comp  imgui_depth_image.frag  light_scattering.comp  line_draw.frag  mipmap_blur.comp  pbr_clustered.frag  pbr_lighting.glh  seven_segment_number.frag  shadow_cube.vert  shadow_depth.frag  shadow_depth.vert  shared-structs.glh  tmo.frag
(+24 files in other folders)
